dist/1.0/bin/sample/retrieveUnpackaged/objects/Commissions_Revenue__c.object
<CustomObject>
    <description>Object for CommissionTab</description>
    <fields>
        <fullName>Percent__c</fullName>
        <description>Percent of the Target</description>
        <inlineHelpText>Percent of the Target</inlineHelpText>
        <label>Percent</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <description>Period for revenue</description>
        <formula>TEXT(Year__c)+&apos; - &apos;+TEXT(Quarter__c)</formula>
        <inlineHelpText>Period for revenue</inlineHelpText>
        <label>Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <description>Quarter of revenue</description>
        <inlineHelpText>Quarter of revenue</inlineHelpText>
        <label>Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <description>Sum accumulated by salesman in chosen period</description>
        <inlineHelpText>Sum accumulated by salesman in chosen period</inlineHelpText>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salesman__c</fullName>
        <description>Salesman for this Commisions Revenue</description>
        <inlineHelpText>Salesman for this Commisions Revenue</inlineHelpText>
        <label>Salesman</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commissions_Revenues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <description>Target for chosen period.</description>
        <inlineHelpText>Target for chosen period. Auto-value of this field equals value of Revenue from previous period. To see this, you have to set values of fields: Salesman, Year and Quarter.</inlineHelpText>
        <label>Target</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Year for Revenue</description>
        <label>Year</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Commissions Revenue</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissions Revenues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>